--- a/client/package.json
+++ b/client/package.json
@@ -2,6 +2,7 @@
   "name": "client",
   "version": "0.1.0",
   "private": true,
+  "proxy": "http://localhost:5000",
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
@@ -45,6 +46,7 @@
     "@material-ui/core": "^4.12.1",
     "@material-ui/icons": "^4.11.2",
     "@types/material-ui": "^0.21.9",
+    "@types/react-redux": "^7.1.17",
     "axios": "^0.21.1",
     "moment": "^2.29.1",
     "react-file-base64": "^1.0.3",
