--- a/server/package.json
+++ b/server/package.json
@@ -24,5 +24,8 @@
     "nodemon": "^2.0.9",
     "ts-node": "^10.0.0",
     "typescript": "^4.3.5"
+  },
+  "dependencies": {
+    "dotenv": "^10.0.0"
   }
 }
