--- a/server/package.json
+++ b/server/package.json
@@ -4,14 +4,18 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "watch": "tsc -w",
-    "dev": " nodemon dist/index.js",
-    "start": "ts-node dist/index.js",
-    "start2": "ts-node src/index.ts"
+    "start": "node dist/index.js",
+    "postinstall": "tsc",
+    "watch-node": "nodemon dist/index.js",
+    "watch-ts": "tsc -w",
+    "deploy": "git add . && git commit -m Heroku && git push heroku main"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
+  "engines": { 
+    "node": "14.17.2"
+  },
   "devDependencies": {
     "@types/body-parser": "^1.19.1",
     "@types/cors": "^2.8.11",
@@ -28,4 +32,5 @@
   "dependencies": {
     "dotenv": "^10.0.0"
   }
+
 }
