--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,15 @@
     "@types/react-dom": "^17.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "@material-ui/core": "^4.12.1",
+    "@material-ui/icons": "^4.11.2",
+    "@types/material-ui": "^0.21.9",
+    "@types/react-redux": "^7.1.17",
+    "axios": "^0.21.1",
+    "moment": "^2.29.1",
+    "react-file-base64": "^1.0.3",
+    "redux": "^4.1.0",
+    "redux-thunk": "^2.3.0",
     "react-redux": "^7.2.4",
     "react-scripts": "4.0.3",
     "typescript": "^4.1.2",
@@ -43,15 +52,5 @@
       "last 1 safari version"
     ]
   },
-  "devDependencies": {
-    "@material-ui/core": "^4.12.1",
-    "@material-ui/icons": "^4.11.2",
-    "@types/material-ui": "^0.21.9",
-    "@types/react-redux": "^7.1.17",
-    "axios": "^0.21.1",
-    "moment": "^2.29.1",
-    "react-file-base64": "^1.0.3",
-    "redux": "^4.1.0",
-    "redux-thunk": "^2.3.0"
-  }
+  "devDependencies": {}
 }
