--- a/client/package.json
+++ b/client/package.json
@@ -5,27 +5,30 @@
   "private": true,
   "proxy": "http://localhost:5000",
   "dependencies": {
+    "@material-ui/core": "^4.12.1",
+    "@material-ui/icons": "^4.11.2",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "@types/base64-js": "^1.3.0",
     "@types/jest": "^26.0.15",
+    "@types/jwt-decode": "^3.1.0",
+    "@types/material-ui": "^0.21.9",
     "@types/node": "^12.0.0",
     "@types/react": "^17.0.13",
     "@types/react-dom": "^17.0.0",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "@material-ui/core": "^4.12.1",
-    "@material-ui/icons": "^4.11.2",
-    "@types/material-ui": "^0.21.9",
     "@types/react-redux": "^7.1.17",
     "axios": "^0.21.1",
+    "jwt-decode": "^3.1.2",
     "moment": "^2.29.1",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "react-file-base64": "^1.0.3",
-    "redux": "^4.1.0",
-    "redux-thunk": "^2.3.0",
+    "react-google-login": "^5.2.2",
     "react-redux": "^7.2.4",
     "react-scripts": "4.0.3",
+    "redux": "^4.1.0",
+    "redux-thunk": "^2.3.0",
     "typescript": "^4.1.2",
     "web-vitals": "^1.0.1"
   },
