--- a/server/package.json
+++ b/server/package.json
@@ -24,12 +24,16 @@
     "typescript": "^4.3.5"
   },
   "dependencies": {
+    "@types/bcrypt": "^5.0.0",
+    "@types/jsonwebtoken": "^8.5.4",
     "@types/node": "^15.14.2",
-    "express": "^4.17.1",
-    "cors": "^2.8.5",
-    "nodemon": "^2.0.9",
+    "bcrypt": "^5.0.1",
     "body-parser": "^1.19.0",
+    "cors": "^2.8.5",
+    "dotenv": "^10.0.0",
+    "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.13.2",
-    "dotenv": "^10.0.0"
+    "nodemon": "^2.0.9"
   }
 }
