edit homepage url

--- a/client/package.json
+++ b/client/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://Ranthonym.github.io/rememory/",
+  "homepage": "https://ranthonym.github.io/rememory/",
   "name": "client",
   "version": "0.1.0",
   "private": true,
